src/test/ui/unsafe/unsafe-const-fn.stderr
error[E0133]: call to unsafe function is unsafe and requires unsafe function or block
  --> $DIR/unsafe-const-fn.rs:7:18
   |
LL | const VAL: u32 = dummy(0xFFFF);
   |                  ^^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior

error: aborting due to previous error

For more information about this error, try `rustc --explain E0133`.
